<resources>
    <string name="app_name">Weather</string>
    <string name="celsius">°</string>


    <!--Retrofit-->
    <string name="error_connection">Проверьте своё интернет соединение</string>
    <string name="backend_connection_error">Ошибка соединения с сервером</string>
    <string name="unknown_error">Неизвестная ошибка</string>


    <string name="sunset_text">Sunset</string>
    <string name="sunrise_text">Sunrise</string>
    <string name="sun_day_text">Daylight hours </string>
    <string name="sun_day_title_text">DAYLIGHT</string>
    <string name="details_title_text">DETAILS</string>
    <string name="next_7_days_title_text">NEXT 7 DAYS</string>
    <string name="location_permission">Location permission required</string>
    <string name="location_not_available_error">Location not available. Try to choose a city</string>
    <string name="empty_city_list">You have not selected any cities</string>
    <string name="default_time_text">Day, 0:00</string>
    <string name="default_degree_text">0</string>
    <string name="default_max_temp_text">max °С</string>
    <string name="default_city_text">City</string>
    <string name="default_condition_text">Condition</string>
    <string name="default_min_temp_text">min °С</string>
    <string name="no_results_found">No results</string>
    <string name="city_name_search">City name</string>


</resources>
